<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"

    tools:context=".NoteActivity">

    <TextView
        android:id="@+id/textPersonalGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ol_mauro_crispim_111_222_333_44"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/note_et"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:gravity="start|top"
        android:hint="@string/digite_aqui_sua_nota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textPersonalGreeting"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="85dp" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_note_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />


</androidx.constraintlayout.widget.ConstraintLayout>